Update qunit hotlinks to use the jQuery site.

--- a/dateutil.test.html
+++ b/dateutil.test.html
@@ -6,9 +6,8 @@
   <title>dateutil tests</title>
 
   <!-- links to qunit + jquery -->
-  <link rel="stylesheet" href="http://github.com/jquery/qunit/raw/master/qunit/qunit.css" />
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-  <script src="http://github.com/jquery/qunit/raw/master/qunit/qunit.js"></script>
+  <link rel="stylesheet" href="http://code.jquery.com/qunit/qunit-git.css" />
+  <script src="http://code.jquery.com/qunit/qunit-git.js"></script>
 
   <!-- JSON tests -->
   <script src="dateutil.js"></script>
